# Rhpc

./: ChangeLog  DESCRIPTION  MD5  NAMESPACE  README  cleanup  configure  configure.ac
R/: Rhpc.R  RhpcExt.R  RhpcOp.R  RhpcRNG.R  RhpcSerialzie.R  RhpcWorker.R
man/: Rhpc-package.Rd
src/: Makevars.in  Makevars.win  RhpcMPI.c  RhpcMPIWorkerCall.h  RhpcMPIlapplyLB.h  RhpcMPIlapplyseq.h  RhpcSerialize.c  registerDynamicSymbol.c
src/common/: Rhpc.h  Rhpc_ms.h  config.h.in  fakemaster.h
src/dust/: DESCRIPTION.in  mk
src/windows/: Rhpc.c
src/worker/: Makefile.in  Makefile.win  Rhpc.cmd.in  Rhpc.in  RhpcSpawn.in  RhpcSpawnWin.cmd.in  RhpcWin.cmd.in  RhpcWorker.c  RhpcWorkerSerialize.c  RhpcWorker_LapplyLB.h  RhpcWorker_Lapplyseq.h  RhpcWorker_WorkerCall.h  fakemaster.c
